# emitter

./: Cargo.toml  README.md  rust-toolchain.toml
.github/actions/: build.yml
.github/workflows/: build.yml
assets/maps/: world.map.ron  world.scn.ron
assets/models/: editor-handle.mdl.ron  editor-handle.mdl.ron.bak  ship-target.mdl.ron  ship.mdl.ron
assets/scenes/: world.scn.ron
assets/shaders/: line_material.wgsl
src/: collision_groups.rs  damageable.rs  egui_style.rs  library.rs  line_material.rs  main.rs  map.rs  render_layers.rs  team.rs
src/assets/: map.rs  mod.rs  model.rs
src/bullet/: mod.rs
src/editor/: hover_effect.rs  input.rs  mesh.rs  mod.rs  scene.rs  ui.rs
src/editor/ui/: mod.rs
src/enemy/: amoeba.rs  mod.rs
src/enemy/behaviour/: chase.rs
src/player/: input.rs  mod.rs  startup.rs  systems.rs
src/utils/: drawing.rs  zlock.rs
src/weapon/: mod.rs
