[package]
name = "emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy-inspector-egui = "0.18.0"
bevy_egui = "0.20.1"
bevy_hanabi = "0.6.0-dev"
bevy_rapier3d = "0.21.0"
big-brain = "0.17.0"
egui = "0.21.0"
egui-gizmo = "0.10.0"
egui_dock = "0.4.0"
heck = "0.4.1"
leafwing-input-manager = { version = "0.9.0", features = ["egui"] }
rand = "0.8.5"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi", rev = "ca4b28fef0be3711222dd8666b6171fd000f094b" }
