[package]
name = "emitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.19.0"
bevy = "0.11.3"
bevy_egui = "0.21.0"
bevy_hanabi = "0.7.0"
bevy_rapier3d = "0.22.0"
big-brain = "0.18.0"
egui-gizmo = "0.11.0"
egui = "0.22.0"
egui_dock = "0.6.3"
heck = "0.4.1"
itertools = "0.11.0"
leafwing-input-manager = { version = "0.10.0", features = ["egui"] }
rand = "0.8.5"
ron = "0.8.1"
serde = "1.0.185"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy/dynamic_linking"]
